# Nirmit-Project

./: .gitignore  2026-05-10-145741-local-command-caveatcaveat-the-messages-below.txt  ASSET_PIPELINE_BRIEF.md  CLAUDE.md  DEMO_BUGS.md  DEMO_SCRIPT.md  Nirmit — Homepage UIUX Audit.md  README.md  SESSION_HANDOVER.md  VISION.md  download_assets.py  fix_scale.mjs  nirmit-ux-migration-guide.md  nirmit_fix.md  package-lock.json  package.json  ux audit.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  migrate.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: apply.py  catalog.py  chat.py  cost.py  designs.py  export.py  finishing.py  generate.py  validate.py
backend/app/domain/boq/: __init__.py  boq.py  hindi.py  pdf.py
backend/app/domain/catalog/: __init__.py  hero_catalog.py  model.py  repository.py  selector.py
backend/app/domain/costing/: __init__.py  engine.py
backend/app/domain/finishing/: __init__.py  options.py
backend/app/domain/intent/: __init__.py  executor.py
backend/app/domain/persistence/: __init__.py  repository.py
backend/app/graph/: collaborator_graph.py  generate_graph.py
backend/app/llm/: client.py
backend/app/prompts/: __init__.py  voices.py
backend/app/schemas/: __init__.py  state.py
backend/data/: catalog.json  catalog_hero.json  nirmit.sqlite
backend/scripts/: expand_catalog.py  export_schema.py  fetch_3dfront.py  migrate_catalog.py  swap_catalog.py  swap_hero_catalog.py
backend/tests/: test_boq_pdf.py  test_generate_smoke.py  test_intent.py  test_solver.py  test_vastu.py
(+254 files in other folders)
